MMT-455: Fix logo spacing issue and advanced search overlay issue.

--- a/app/assets/stylesheets/components/_lightbox.scss
+++ b/app/assets/stylesheets/components/_lightbox.scss
@@ -5,8 +5,8 @@
 #lightbox {
   width: 100%;
   height: 100%;
-  background-color: rgba($true-black, 0.7);
+  background-color: rgba($true-black, 0.75);
   position: absolute;
-  top: 118px;
+  top: 140px;
   display: block;
 }
